--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 jwt.secret = javainuse
 jwt.expirationDateInMs = 18000000
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sprig-security
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/file-operations
 spring.datasource.username=root
 spring.datasource.password=pass
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
+
+spring.servlet.multipart.max-file-size=5MB
